fix vertical align on members and modal window is ready

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -278,6 +278,12 @@ input.input_modal{
   border: 0;
   box-shadow: 0px 0px 0px 1px #285193;
 }
+input.input_modal::placeholder{
+  color: #ffffff;
+}
+textarea.input_modal::placeholder{
+  color: #ffffff;
+}
 textarea.input_modal{
   border-radius: 4px;
   background: 0 !important;
